[PACA-411] Only add FI_DOC_CLM_CNTL_NUM