@@ -206,13 +206,10 @@ public final class HospiceClaimTransformerV2Test {
   @Test
   public void shouldHaveIdentifiers() {
     List<Identifier> expected = eob.getIdentifier();
-    assertEquals(3, expected.size());
+    assertEquals(2, expected.size());
 
     List<Identifier> compare =
         Arrays.asList(
-            new Identifier()
-                .setSystem("https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num")
-                .setValue("2718813985998"),
             TransformerTestUtilsV2.createIdentifier(
                 "https://bluebutton.cms.gov/resources/variables/clm_id",
                 "9992223422",
@@ -234,7 +231,12 @@ public final class HospiceClaimTransformerV2Test {
   @Test
   public void shouldHaveExtensions() {
     List<Extension> expected = eob.getExtension();
-    assertEquals(5, expected.size());
+    assertEquals(6, expected.size());
+
+    assertNotNull(
+        TransformerTestUtilsV2.findExtensionByUrl(
+            "https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num",
+            eob.getExtension()));
 
     assertNotNull(
         TransformerTestUtilsV2.findExtensionByUrl(
@@ -264,13 +266,18 @@ public final class HospiceClaimTransformerV2Test {
     hospiceCountExtension.setValue(new Quantity(2));
 
     List<Extension> compare =
-        Arrays.asList(
+        List.of(
             new Extension(
                 "https://bluebutton.cms.gov/resources/variables/nch_near_line_rec_ident_cd",
                 new Coding(
                     "https://bluebutton.cms.gov/resources/variables/nch_near_line_rec_ident_cd",
                     "V",
                     "Part A institutional claim record (inpatient [IP], skilled nursing facility [SNF], hospice [HOS], or home health agency [HHA])")),
+            new Extension(
+                "https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num",
+                new Identifier()
+                    .setSystem("https://bluebutton.cms.gov/resources/variables/fi_doc_clm_cntl_num")
+                    .setValue("2718813985998")),
             new Extension(
                 "https://bluebutton.cms.gov/resources/variables/clm_mdcr_non_pmt_rsn_cd",
                 new Coding(
